--- a/aacs/android/app-components/alexa-auto-voice-ui/src/main/AndroidManifest.xml
+++ b/aacs/android/app-components/alexa-auto-voice-ui/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <!-- Enables getting intents from AACS -->
     <uses-permission android:name="com.amazon.alexaautoclientservice"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:allowBackup="true"
