--- a/aacs/android/sample-app/gradle.properties
+++ b/aacs/android/sample-app/gradle.properties
@@ -13,3 +13,4 @@ org.gradle.jvmargs=-Xmx4096m
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableR8=false
