--- a/aacs/android/app-components/alexa-auto-voice-interaction/src/main/AndroidManifest.xml
+++ b/aacs/android/app-components/alexa-auto-voice-interaction/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
             android:permission="android.permission.BIND_VOICE_INTERACTION">
         </service>
 
+        <service android:name=".service.AutoVoiceDelegateService"/>
+
         <receiver android:name=".receiver.AACSBroadcastReceiver"
             android:exported="true">
             <intent-filter>
